[package]
name = "nondestructive"
version = "0.0.10"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.65"
description = "Nondestructive editing over various file formats."
documentation = "https://docs.rs/nondestructive"
readme = "README.md"
homepage = "https://github.com/udoprog/nondestructive"
repository = "https://github.com/udoprog/nondestructive"
license = "MIT/Apache-2.0"
keywords = ["yaml"]
categories = ["encoding", "parser-implementations"]

[features]
default = ["yaml"]
yaml = []
serde = ["dep:serde", "bstr/serde"]

[dependencies]
bstr = "1.4.0"
itoa = "1.0.6"
lexical-core = "0.8.5"
memchr = "2.5.0"
ryu = "1.0.13"
serde = { version = "1.0.157", optional = true }
slab = "0.4.8"
twox-hash = "1.6.3"

[dev-dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.157", features = ["derive"] }
serde_yaml = "0.9.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
